--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,9 @@
     <div class="background-box">
         <h1>HOME PAGE</h1>
         <br>
-        <p style="color: white;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, </p>
+        <p style="color: white;"> <p>By using our site, you acknowledge that you have read and understand our </p>
         <br>
-        <a href="/privacy-policy">PRIVACY POLICY LINK</a>
+        <a href="/privacy-policy">PRIVACY POLICY</a>
     </div>
     <div id="main-page-buttons">
         <a href="/auth/steam">
