--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -288,6 +288,7 @@ ul, li {
     background-color: transparent;
     padding: 0.1vh 0.5vw;
     font-size: 1.25rem;
+    margin-top: 2vh;
 }
 
 .crossIcon {
@@ -296,7 +297,7 @@ ul, li {
     font-size: 1.5rem;
 }
 
-/* ===================== General List ===================== */
+/* ===================== General List Page ===================== */
 
 #listPageLayout {
     display: flex;
@@ -306,18 +307,20 @@ ul, li {
     flex: 2;
 }
 
+/* All components for the RIGHT hand column */
 #rightHandList {
     flex: 2;
 }
 
+#roomCodeList {
+    text-decoration: underline;
+}
+
+/* All components for the CENTER column */
 #centerList {
     display: flex;
     flex-direction: column;
     flex: 6;
-}
-
-#roomCodeList {
-    text-decoration: underline;
 }
 
 #recGamesList, #toGrabList {
@@ -332,7 +335,7 @@ ul, li {
 }
 
 #priceItems button {
-    max-width: 8vw;
+    max-width: 10vw;
     border: 1px white solid;
     border-radius: 8px;
     background-color: transparent;
@@ -347,10 +350,15 @@ ul, li {
     max-height: 4vh;
     max-width: 6vw;
     justify-content: center;
+    gap: 0.25vw;
 }
 
 #customPriceElements input {
     max-width: 6vw;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    font-size: 1.2rem;
 }
 
 #customPriceElements button {
@@ -364,4 +372,44 @@ ul, li {
     margin-top: 8vh;
     text-decoration: underline;
     font-size: 1.2rem;
+}
+
+#filterClearButton {
+    margin-top: 2vh;
+    background-color: red;
+}
+
+#roomMembersList {
+
+}
+
+#genreDiv select, #menuDiv select {
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+    font-size: 1.1rem;
+}
+
+#genreDiv option, #menuDiv option {
+    background-color: #17293E;
+}
+
+.inputWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 50%;
+    margin: auto;
+}
+
+.roomnum{
+    background-color: lightgray;
+    border: none;
+    border-bottom: 1px dashed #000;
+    padding: 5px 10px;
+    outline: none;
+    text-align: center;
+    width: 60px;
+    height: 60px;
+    margin: 0 5px;
 }
