--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,15 @@ nav {
     max-height: 5vh;
 }
 
+#logoutNavButton {
+    max-height: 5vh;
+    background-color: transparent;
+}
+
+#actualLogoutImg {
+    max-height: 5vh;
+}
+
 /* Alignment for the logo and back arrow when we have it displayed */
 #logoItem {
     flex: 1;
@@ -394,22 +403,49 @@ ul, li {
     background-color: #17293E;
 }
 
+/* ===================== Join Room Page ===================== */
+
+/* Overall container for the individual room numbers */
 .inputWrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     max-width: 50%;
     margin: auto;
 }
 
+/* Each individual number in the display */
 .roomnum{
-    background-color: lightgray;
+    color: white;
+    font-size: 24px;
+    background-color: transparent;
     border: none;
-    border-bottom: 1px dashed #000;
+    border-bottom: 2px solid white;
     padding: 5px 10px;
     outline: none;
     text-align: center;
     width: 60px;
     height: 60px;
     margin: 0 5px;
+}
+
+/* Title for Join Room */
+#joinRoomCode {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 4vh;
+}
+
+/* TODO: Ideally there'd be less padding on the boxes, but it's fine for now. */
+#topJoinText {
+    padding-bottom: 2vh;
+}
+
+#bottomJoinText {
+    padding-top: 3vh;
+}
+
+/* Styling both to be the same color & size */
+.joinRoomText {
+    color: #B4B4B4;
+    font-size: 1.25rem;
 }
